set auth and read a specific rowo

--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "author": "pratiksinghchauhan",
   "license": "ISC",
   "dependencies": {
-    "google-spreadsheet": "^2.0.4",
+    "google-auth-library": "^0.11.0",
+    "googleapis": "^22.2.0",
     "hapi": "^16.6.2",
     "hapi-cron-job": "^2.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
